update demo branch

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -463,17 +463,6 @@
           "height": 0,
           "width": 0
         },
-        "aa5fd7cb": {
-          "id": "aa5fd7cb",
-          "path": "readme.html",
-          "output": "readme.html",
-          "name": "readme.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
         "0789292d": {
           "id": "0789292d",
           "path": "showcase/assets/semantic/components/accordion.css",
@@ -2697,6 +2686,17 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "6ed5d936": {
+          "id": "6ed5d936",
+          "path": "howto.html",
+          "output": "howto.html",
+          "name": "howto.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
